# AdventOfCode

./: .gitignore  Cargo.toml  README.md  new_solution.sh
2023-01/rust/: Cargo.toml
2023-01/rust/src/: main.rs
2023-02/rust/: Cargo.toml
2023-02/rust/src/: main.rs  part1.rs  part2.rs
2023-03/rust/: Cargo.toml
2023-03/rust/src/: main.rs  part1.rs  part2.rs
2023-04/rust/: Cargo.toml
2023-04/rust/src/: main.rs  part1.rs  part2.rs
2023-05/rust/: Cargo.toml
2023-05/rust/src/: main.rs  part1.rs  part2.rs
2023-06/rust/: Cargo.toml
2023-06/rust/src/: lib.rs  main.rs  part1.rs  part2.rs
2023-07/rust/: Cargo.toml
2023-07/rust/src/: lib.rs  main.rs  part1.rs  part2.rs  shared_impls.rs  speedy_part1.rs  speedy_part2.rs
2023-08/rust/: Cargo.toml
2023-08/rust/src/: lib.rs  main.rs  part1.rs  part2.rs  speedy_part1.rs  speedy_part2.rs
2023-09/rust/: Cargo.toml
2023-09/rust/src/: lib.rs  main.rs  part1.rs  part2.rs  speedy.rs  speedy_part2.rs
2023-10/rust/: Cargo.toml  out.txt
2023-10/rust/src/: lib.rs  main.rs  part1.rs  part2.rs
2023-11/rust/: Cargo.toml
2023-11/rust/src/: ehllie.rs  lib.rs  main.rs  part1.rs  part2.rs
2023-12/rust/: Cargo.toml
2023-12/rust/src/: lib.rs  main.rs  part1.rs  part2.rs
2023-13/rust/: Cargo.toml
2023-13/rust/src/: main.rs  part1.rs  part2.rs
2023-15/rust/: Cargo.toml
2023-15/rust/src/: main.rs  part1.rs  part2.rs
rust-aoc-lib/: Cargo.toml
rust-aoc-lib/proc-macros/: Cargo.toml
rust-aoc-lib/proc-macros/src/: lib.rs
rust-aoc-lib/src/: lib.rs  macros.rs
templates/rust-template/: Cargo.toml
(+3 files in other folders)
