[package]
name = "solution-2023-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
itertools = "0.12.0"
linkme = "0.3.18"
rayon = "1.8.0"
rust-aoc-lib = { path = "../../rust-aoc-lib" }
